--- a/index.html
+++ b/index.html
@@ -516,8 +516,8 @@
                <!-- ==== offer start ==== -->
                <section class="section offer fade-wrapper light">
                   <div class="container">
-                     <div class="row gaper">
-                        <div class="col-12 col-lg-7 col-xl-6 offset-xl-1">
+                     <div class="row">
+                        <!-- <div class="col-12 col-lg-7 col-xl-6">
                            <div class="offer__cta">
                               <div class="offer__cta-single fade-top">
                                  <span class="sub-title">
@@ -576,9 +576,222 @@
                                     data-background="assets/images/portfolio/animation.jpg"></div>
                               </div>
                            </div>
-                        </div>
-                        <div class="col-12 col-lg-5">
-                           <div class="offer__content section__content">
+                        </div> -->
+
+                        <div class="col-12">
+                           <div class="container">
+                              <div class="row justify-content-center">
+                                 <div class="col-5">
+                                    <div class="portfolio-two__filter-btn section__header g-ind">
+                                       <!-- <div class="offer__cta">
+                                          <div class="offer__cta-single fade-top">
+                                             <span class="sub-title">
+                                                02
+                                                <i class="fa-solid fa-arrow-right"></i>
+                                             </span>
+                                             <h4>
+                                                <button aria-label="Filter Portfolio" data-filter="*" class="active">
+                                                   <span>01</span>
+                                                   All
+                                                </button>
+                                             </h4>
+                                             <div class="offer-thumb-hover d-none d-md-block"
+                                                data-background="assets/images/portfolio/branding.jpg"></div>
+                                          </div>
+                                       </div> -->
+                                       <!-- <button aria-label="Filter Portfolio" data-filter="*" class="active">
+                                          <span>01</span>
+                                          All
+                                       </button>                                       
+                                       <button aria-label="Filter Portfolio" data-filter=".activation">
+                                          <span>02</span>
+                                          Activation
+                                       </button>
+                                       <button aria-label="Filter Portfolio" data-filter=".development">
+                                          <span>03</span>
+                                          Graphic
+                                       </button>
+                                       <button aria-label="Filter Portfolio" data-filter=".technology">
+                                          <span>04</span>
+                                          Website
+                                       </button>
+                                       <button aria-label="Filter Portfolio" data-filter=".animation">
+                                          <span>05</span>
+                                          Animation
+                                       </button> -->
+                                       <div class="offer__cta">
+                                          <div class="offer__cta-single fade-top">
+                                             <span class="sub-title">
+                                                01
+                                                <i class="fa-solid fa-arrow-right"></i>
+                                             </span>
+                                             <h4>
+                                                <button aria-label="Filter Portfolio" data-filter="*">
+                                                   All
+                                                   <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                                </button>
+
+                                             </h4>
+                                             <div class="offer-thumb-hover d-none d-md-block"
+                                                data-background="assets/images/agency/bg-3.jpg"></div>
+                                          </div>
+                                          <div class="offer__cta-single fade-top">
+                                             <span class="sub-title">
+                                                02
+                                                <i class="fa-solid fa-arrow-right"></i>
+                                             </span>
+                                             <h4>
+                                                <button aria-label="Filter Portfolio" data-filter=".activation">
+                                                   Activation
+                                                   <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                                </button>
+                                             </h4>
+                                             <div class="offer-thumb-hover d-none d-md-block"
+                                                data-background="assets/images/agency/bg-3.jpg"></div>
+                                          </div>
+                                          <div class="offer__cta-single fade-top">
+                                             <span class="sub-title">
+                                                03
+                                                <i class="fa-solid fa-arrow-right"></i>
+                                             </span>
+                                             <h4>
+                                                <button aria-label="Filter Portfolio" data-filter=".graphic">
+                                                   Graphic
+                                                   <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                                </button>
+
+                                             </h4>
+                                             <div class="offer-thumb-hover d-none d-md-block"
+                                                data-background="assets/images/agency/bg-3.jpg"></div>
+                                          </div>
+                                          <div class="offer__cta-single fade-top">
+                                             <span class="sub-title">
+                                                04
+                                                <i class="fa-solid fa-arrow-right"></i>
+                                             </span>
+                                             <h4>
+                                                <button aria-label="Filter Portfolio" data-filter=".technology">
+                                                   Digital
+                                                   <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                                </button>
+
+                                             </h4>
+                                             <div class="offer-thumb-hover d-none d-md-block"
+                                                data-background="assets/images/agency/bg-3.jpg"></div>
+                                          </div>
+                                          <div class="offer__cta-single fade-top">
+                                             <span class="sub-title">
+                                                05
+                                                <i class="fa-solid fa-arrow-right"></i>
+                                             </span>
+                                             <h4>
+                                                <button aria-label="Filter Portfolio" data-filter=".animation">
+                                                   Animation
+                                                   <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                                </button>
+
+                                             </h4>
+                                             <div class="offer-thumb-hover d-none d-md-block"
+                                                data-background="assets/images/agency/bg-3.jpg"></div>
+                                          </div>
+                                       </div>
+                                    </div>
+                                 </div>
+                                 <div class="col-7 row masonry-grid">
+                                    <div class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main activation">
+                                       <div class="portfolio__single portfolio__single-active topy-tilt fade-top">
+                                          <a href="portfolio.html">
+                                             <img src="assets/images/portfolio/vr-mbloc-1.jpg" alt="Image">
+                                          </a>
+                                          <div class="portfolio__single-content">
+                                             <a href="portfolio.html">
+                                                <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                             </a>
+                                             <h4>
+                                                <a href="portfolio.html">Activation</a>
+                                             </h4>
+                                          </div>
+                                       </div>
+                                    </div>
+                                    <div class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main activation">
+                                       <div class="portfolio__single topy-tilt fade-top">
+                                          <a href="portfolio.html">
+                                             <img src="assets/images/portfolio/grand_launch_tigersoju_2023_10.jpg" alt="Image">
+                                          </a>
+                                          <div class="portfolio__single-content">
+                                             <a href="portfolio.html">
+                                                <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                             </a>
+                                             <h4>
+                                                <a href="portfolio.html">Activation</a>
+                                             </h4>
+                                          </div>
+                                       </div>
+                                    </div>
+                                    <div class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main technology development">
+                                       <div class="portfolio__single topy-tilt fade-top">
+                                          <a href="portfolio.html">
+                                             <img src="assets/images/portfolio/three.png" alt="Image">
+                                          </a>
+                                          <div class="portfolio__single-content">
+                                             <a href="portfolio.html">
+                                                <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                             </a>
+                                             <h4>
+                                                <a href="portfolio.html">Digital Marketing</a>
+                                             </h4>
+                                          </div>
+                                       </div>
+                                    </div>
+                                    <div class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main design">
+                                       <div class="portfolio__single topy-tilt fade-top">
+                                          <a href="portfolio.html">
+                                             <img src="assets/images/portfolio/four.png" alt="Image">
+                                          </a>
+                                          <div class="portfolio__single-content">
+                                             <a href="portfolio.html">
+                                                <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                             </a>
+                                             <h4>
+                                                <a href="portfolio.html">Digital Marketing</a>
+                                             </h4>
+                                          </div>
+                                       </div>
+                                    </div>
+                                    <div class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main design development">
+                                       <div class="portfolio__single topy-tilt fade-top">
+                                          <a href="portfolio.html">
+                                             <img src="assets/images/portfolio/five.png" alt="Image">
+                                          </a>
+                                          <div class="portfolio__single-content">
+                                             <a href="portfolio.html">
+                                                <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                             </a>
+                                             <h4>
+                                                <a href="portfolio.html">Digital Marketing</a>
+                                             </h4>
+                                          </div>
+                                       </div>
+                                    </div>
+                                    <div class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main design technology development">
+                                       <div class="portfolio__single topy-tilt fade-top">
+                                          <a href="portfolio.html">
+                                             <img src="assets/images/portfolio/one.png" alt="Image">
+                                          </a>
+                                          <div class="portfolio__single-content">
+                                             <a href="portfolio.html">
+                                                <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                             </a>
+                                             <h4>
+                                                <a href="portfolio.html">Digital Marketing</a>
+                                             </h4>
+                                          </div>
+                                       </div>
+                                    </div>
+                                 </div>
+                              </div>
+                           </div>
+                           <!-- <div class="offer__content section__content">
                               <span class="sub-title">
                                  WHAT WE OFFER
                                  <i class="fa-solid fa-arrow-right"></i>
@@ -592,7 +805,7 @@
                               <div class="section__content-cta">
                                  <a href="our-services.html" class="btn btn--secondary">view all services</a>
                               </div>
-                           </div>
+                           </div> -->
                         </div>
                      </div>
                   </div>
