- remove unused pages - Add portfolio images

--- a/index.html
+++ b/index.html
@@ -392,8 +392,8 @@
                         <div class="col-lg-7 col-md-6 masonry-grid">
                            <div class="col-12 col-md-6 col-xl-6 filter-item-space grid-item-main activation">
                               <div class="portfolio__single portfolio__single-active topy-tilt fade-top">
-                                 <a href="#">
-                                    <img src="assets/images/portfolio/three.png" alt="Image">
+                                 <a href="assets/images/portfolio/vr-mbloc-1.jpg" class="image-link">
+                                    <img src="assets/images/portfolio/vr-mbloc-1.jpg" alt="Image">
                                  </a>
                                  <div class="portfolio__single-content">
                                     <a href="#">
@@ -407,8 +407,8 @@
                            </div>
                            <div class="col-12 col-md-6 col-xl-6 filter-item-space grid-item-main activation">
                               <div class="portfolio__single topy-tilt fade-top">
-                                 <a href="#">
-                                    <img src="assets/images/portfolio/three.png" alt="Image">
+                                 <a href="assets/images/portfolio/grand_launch_tigersoju_2023_10.jpg" class="image-link">
+                                    <img src="assets/images/portfolio/grand_launch_tigersoju_2023_10.jpg" alt="Image">
                                  </a>
                                  <div class="portfolio__single-content">
                                     <a href="#">
@@ -420,10 +420,10 @@
                                  </div>
                               </div>
                            </div>
-                           <div class="col-12 col-md-6 col-xl-6 filter-item-space grid-item-main technology">
+                           <div class="col-12 col-md-6 col-xl-6 filter-item-space grid-item-main animation">
                               <div class="portfolio__single topy-tilt fade-top">
-                                 <a href="#">
-                                    <img src="assets/images/portfolio/three.png" alt="Image">
+                                 <a href="assets/images/portfolio/icecream.jpg" class="image-link">
+                                    <img src="assets/images/portfolio/icecream.jpg" alt="Image">
                                  </a>
                                  <div class="portfolio__single-content">
                                     <a href="#">
@@ -437,8 +437,8 @@
                            </div>
                            <div class="col-12 col-md-6 col-xl-6 filter-item-space grid-item-main animation">
                               <div class="portfolio__single topy-tilt fade-top">
-                                 <a href="#">
-                                    <img src="assets/images/portfolio/four.png" alt="Image">
+                                 <a href="assets/images/portfolio/tigerbeer.jpg" class="image-link">
+                                    <img src="assets/images/portfolio/tigerbeer.jpg" alt="Image">
                                  </a>
                                  <div class="portfolio__single-content">
                                     <a href="#">
@@ -452,8 +452,8 @@
                            </div>
                            <div class="col-12 col-md-6 col-xl-6 filter-item-space grid-item-main graphic">
                               <div class="portfolio__single topy-tilt fade-top">
-                                 <a href="#">
-                                    <img src="assets/images/portfolio/five.png" alt="Image">
+                                 <a href="assets/images/portfolio/tppi.jpg" class="image-link">
+                                    <img src="assets/images/portfolio/tppi.jpg" alt="Image">
                                  </a>
                                  <div class="portfolio__single-content">
                                     <a href="#">
@@ -465,10 +465,10 @@
                                  </div>
                               </div>
                            </div>
-                           <div class="col-12 col-md-6 col-xl-6 filter-item-space grid-item-main animation">
+                           <div class="col-12 col-md-6 col-xl-6 filter-item-space grid-item-main graphic">
                               <div class="portfolio__single topy-tilt fade-top">
-                                 <a href="#">
-                                    <img src="assets/images/portfolio/one.png" alt="Image">
+                                 <a href="assets/images/portfolio/miller-world.jpg" class="image-link">
+                                    <img src="assets/images/portfolio/miller-world.jpg" alt="Image">
                                  </a>
                                  <div class="portfolio__single-content">
                                     <a href="#">
@@ -482,8 +482,8 @@
                            </div>
                            <div class="col-12 col-md-6 col-xl-6 filter-item-space grid-item-main animation">
                               <div class="portfolio__single topy-tilt fade-top">
-                                 <a href="#">
-                                    <img src="assets/images/portfolio/one.png" alt="Image">
+                                 <a href="assets/images/portfolio/animation.jpg" class="image-link">
+                                    <img src="assets/images/portfolio/animation.jpg" alt="Image">
                                  </a>
                                  <div class="portfolio__single-content">
                                     <a href="#">
@@ -491,14 +491,29 @@
                                     </a>
                                     <h4>
                                        <a href="#">Animation</a>
+                                    </h4>
+                                 </div>
+                              </div>
+                           </div>
+                           <div class="col-12 col-md-6 col-xl-6 filter-item-space grid-item-main technology">
+                              <div class="portfolio__single topy-tilt fade-top">
+                                 <a href="assets/images/portfolio/web4.jpg" class="image-link">
+                                    <img src="assets/images/portfolio/web4.jpg" alt="Image">
+                                 </a>
+                                 <div class="portfolio__single-content">
+                                    <a href="#">
+                                       <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                    </a>
+                                    <h4>
+                                       <a href="#">Digital</a>
                                     </h4>
                                  </div>
                               </div>
                            </div>
                            <div class="col-12 col-md-6 col-xl-6 filter-item-space grid-item-main graphic">
                               <div class="portfolio__single topy-tilt fade-top">
-                                 <a href="#">
-                                    <img src="assets/images/portfolio/one.png" alt="Image">
+                                 <a href="assets/images/portfolio/falken.jpg" class="image-link">
+                                    <img src="assets/images/portfolio/falken.jpg" alt="Image">
                                  </a>
                                  <div class="portfolio__single-content">
                                     <a href="#">
@@ -512,8 +527,8 @@
                            </div>
                            <div class="col-12 col-md-6 col-xl-6 filter-item-space grid-item-main technology">
                               <div class="portfolio__single topy-tilt fade-top">
-                                 <a href="#">
-                                    <img src="assets/images/portfolio/one.png" alt="Image">
+                                 <a href="assets/images/portfolio/web1.jpg" class="image-link">
+                                    <img src="assets/images/portfolio/web1.jpg" alt="Image">
                                  </a>
                                  <div class="portfolio__single-content">
                                     <a href="#">
@@ -527,8 +542,23 @@
                            </div>
                            <div class="col-12 col-md-6 col-xl-6 filter-item-space grid-item-main technology">
                               <div class="portfolio__single topy-tilt fade-top">
-                                 <a href="#">
-                                    <img src="assets/images/portfolio/one.png" alt="Image">
+                                 <a href="assets/images/portfolio/web2.jpg" class="image-link">
+                                    <img src="assets/images/portfolio/web2.jpg" alt="Image">
+                                 </a>
+                                 <div class="portfolio__single-content">
+                                    <a href="#">
+                                       <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                    </a>
+                                    <h4>
+                                       <a href="#">Digital</a>
+                                    </h4>
+                                 </div>
+                              </div>
+                           </div>
+                           <div class="col-12 col-md-6 col-xl-6 filter-item-space grid-item-main technology">
+                              <div class="portfolio__single topy-tilt fade-top">
+                                 <a href="assets/images/portfolio/web3.jpg" class="image-link">
+                                    <img src="assets/images/portfolio/web3.jpg" alt="Image">
                                  </a>
                                  <div class="portfolio__single-content">
                                     <a href="#">
@@ -563,40 +593,40 @@
                         <div class="col-12">
                            <div class="sponsor__slider ">
                               <div class="sponsor__slider-item">
-                                 <img src="assets/images/sponsor/one.png" alt="Image">
+                                 <img src="assets/images/sponsor/amild.png" alt="Image">
                               </div>
                               <div class="sponsor__slider-item">
-                                 <img src="assets/images/sponsor/two.png" alt="Image">
+                                 <img src="assets/images/sponsor/bintang-cristal.png" alt="Image">
                               </div>
                               <div class="sponsor__slider-item">
-                                 <img src="assets/images/sponsor/three.png" alt="Image">
+                                 <img src="assets/images/sponsor/bintang.png" alt="Image">
                               </div>
                               <div class="sponsor__slider-item">
-                                 <img src="assets/images/sponsor/four.png" alt="Image">
+                                 <img src="assets/images/sponsor/bmw.png" alt="Image">
                               </div>
                               <div class="sponsor__slider-item">
-                                 <img src="assets/images/sponsor/five.png" alt="Image">
+                                 <img src="assets/images/sponsor/gojek.png" alt="Image">
                               </div>
                               <div class="sponsor__slider-item">
-                                 <img src="assets/images/sponsor/six.png" alt="Image">
+                                 <img src="assets/images/sponsor/heineken.png" alt="Image">
                               </div>
                               <div class="sponsor__slider-item">
-                                 <img src="assets/images/sponsor/one.png" alt="Image">
+                                 <img src="assets/images/sponsor/ibox.png" alt="Image">
                               </div>
                               <div class="sponsor__slider-item">
-                                 <img src="assets/images/sponsor/two.png" alt="Image">
+                                 <img src="assets/images/sponsor/marlboro.png" alt="Image">
                               </div>
                               <div class="sponsor__slider-item">
-                                 <img src="assets/images/sponsor/three.png" alt="Image">
+                                 <img src="assets/images/sponsor/sampoerna.png" alt="Image">
                               </div>
                               <div class="sponsor__slider-item">
-                                 <img src="assets/images/sponsor/four.png" alt="Image">
+                                 <img src="assets/images/sponsor/samsoe.png" alt="Image">
                               </div>
                               <div class="sponsor__slider-item">
-                                 <img src="assets/images/sponsor/five.png" alt="Image">
+                                 <img src="assets/images/sponsor/tokped.png" alt="Image">
                               </div>
                               <div class="sponsor__slider-item">
-                                 <img src="assets/images/sponsor/six.png" alt="Image">
+                                 <img src="assets/images/sponsor/traveloka.png" alt="Image">
                               </div>
                            </div>
                         </div>
@@ -617,70 +647,12 @@
                      <div class="row justify-content-center">
                         <div class="col-12 col-lg-8">
                            <div class="section__header text-center">
-                              <a href="about-us.html" class="sub-title mb-0">
+                              <a href="https://api.whatsapp.com/send?phone=6283114542479" target="_blank" class="sub-title mb-0">
                                  Call Us
                                  <i class="fa-solid fa-arrow-right"></i>
                               </a>
                            </div>
                         </div>
-                     </div>
-                  </div>
-                  <div class="next__text-slider">
-                     <div class="next__text-slider-single">
-                        <h2 class="h1">
-                           <a href="about-us.html">
-                              About Us
-                              <i class="fa-sharp fa-solid fa-arrow-down-right"></i>
-                           </a>
-                        </h2>
-                     </div>
-                     <div class="next__text-slider-single">
-                        <h2 class="h1">
-                           <a href="about-us.html">
-                              About Us
-                              <i class="fa-sharp fa-solid fa-arrow-down-right"></i>
-                           </a>
-                        </h2>
-                     </div>
-                     <div class="next__text-slider-single">
-                        <h2 class="h1">
-                           <a href="about-us.html">
-                              About Us
-                              <i class="fa-sharp fa-solid fa-arrow-down-right"></i>
-                           </a>
-                        </h2>
-                     </div>
-                     <div class="next__text-slider-single">
-                        <h2 class="h1">
-                           <a href="about-us.html">
-                              About Us
-                              <i class="fa-sharp fa-solid fa-arrow-down-right"></i>
-                           </a>
-                        </h2>
-                     </div>
-                     <div class="next__text-slider-single">
-                        <h2 class="h1">
-                           <a href="about-us.html">
-                              About Us
-                              <i class="fa-sharp fa-solid fa-arrow-down-right"></i>
-                           </a>
-                        </h2>
-                     </div>
-                     <div class="next__text-slider-single">
-                        <h2 class="h1">
-                           <a href="about-us.html">
-                              About Us
-                              <i class="fa-sharp fa-solid fa-arrow-down-right"></i>
-                           </a>
-                        </h2>
-                     </div>
-                     <div class="next__text-slider-single">
-                        <h2 class="h1">
-                           <a href="about-us.html">
-                              About Us
-                              <i class="fa-sharp fa-solid fa-arrow-down-right"></i>
-                           </a>
-                        </h2>
                      </div>
                   </div>
                   <div class="lines d-none d-lg-flex">
@@ -720,7 +692,7 @@
                               </a>
                            </div>
                            <div class="footer__cta text-start">
-                              <a href="contact-us.html" class="btn btn--secondary">book a call now</a>
+                              <a href="https://api.whatsapp.com/send?phone=6283114542479" class="btn btn--secondary">book a call now</a>
                            </div>
                         </div>
                      </div>
