--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <!-- #keywords -->
    <meta name="keywords" content="creative, agency, portfolio">
    <!-- #description -->
-   <meta name="description" content="Creative Agency Portfolio HTML5 Template">
+   <meta name="description" content="Rindu Komisi Creative Agency">
    <!-- ==== css dependencies start ==== -->
    <!-- bootstrap five css -->
    <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
